new(filter for requests)