@@ -3,42 +3,60 @@ package it.jac.project_work.budget_manager.security;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
 import it.jac.project_work.budget_manager.entity.Role;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 
 import javax.crypto.SecretKey;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class JwtUtil {
     private static final SecretKey SECRET = Keys.secretKeyFor(SignatureAlgorithm.HS512);
     private static final long EXPIRATION_TIME = 864_000_000;
 
-
-
-
     public static String generateToken(String username, Set<Role> roles) {
         return Jwts.builder()
                 .setSubject(username)
-                .claim("roles", roles.stream().map(Enum::name).toList())
+                .claim("roles", roles.stream().map(Enum::name).collect(Collectors.toList()))
                 .setIssuedAt(new Date(System.currentTimeMillis()))
                 .setExpiration(new Date(System.currentTimeMillis() + EXPIRATION_TIME))
-                .signWith(SignatureAlgorithm.HS512, SECRET)
+                .signWith(SECRET)
                 .compact();
     }
 
-
     public static String extractUsername(String token) {
-        return Jwts.parser()
+        return Jwts.parserBuilder()
                 .setSigningKey(SECRET)
+                .build()
                 .parseClaimsJws(token)
                 .getBody()
                 .getSubject();
     }
 
-    public static boolean validateToken(String token, String username) {
-        String extractedUsername = extractUsername(token);
-        return extractedUsername.equals(username) && !isTokenExpired(token);
+    public static List<String> extractRoles(String token) {
+        Claims claims = Jwts.parserBuilder()
+                .setSigningKey(SECRET)
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
+
+        return claims.get("roles", List.class);
     }
+
+
+    public static boolean hasRole(String role) {
+        List<String> roles = extractRoles(String.valueOf(SecurityContextHolder.getContext().getAuthentication()));
+        return roles != null && roles.contains(role);
+    }
+
+    public static boolean validateToken(String token) {
+        String username = extractUsername(token);
+        return username != null && !isTokenExpired(token);
+    }
+
 
     private static boolean isTokenExpired(String token) {
         Date expiration = extractExpiration(token);
@@ -46,44 +64,11 @@ public class JwtUtil {
     }
 
     public static Date extractExpiration(String token) {
-        return Jwts.parser()
+        return Jwts.parserBuilder()
                 .setSigningKey(SECRET)
+                .build()
                 .parseClaimsJws(token)
                 .getBody()
                 .getExpiration();
     }
-
-    public static boolean isTokenMalformed(String token) {
-        try {
-            Jwts.parser().setSigningKey(SECRET).parseClaimsJws(token);
-            return false;
-        } catch (MalformedJwtException e) {
-            System.out.println("Token non valido: " + e.getMessage());
-            return true;
-        } catch (ExpiredJwtException e) {
-            System.out.println("Token scaduto: " + e.getMessage());
-            return true;
-        } catch (UnsupportedJwtException e) {
-            System.out.println("Token non supportato: " + e.getMessage());
-            return true;
-        } catch (IllegalArgumentException e) {
-            System.out.println("Claims JWT vuoti: " + e.getMessage());
-            return true;
-        }
-    }
-
-    public static List<String> extractRoles(String token) {
-        Claims claims = Jwts.parser()
-                .setSigningKey(SECRET)
-                .parseClaimsJws(token)
-                .getBody();
-        return claims.get("roles", List.class);
-    }
-    public static boolean hasRole(String token, String role) {
-        List<String> roles = extractRoles(token);
-        return roles != null && roles.contains(role);
-    }
-
-
-
 }
